--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             const scaleY = canvas.height / rect.height;
 
             // This is just a constant value of the size of each tile that will be printed to the screen, I have also locked the total amount of tiles that will be printed using the size constants that are set to 20 whilst I am in the early development.
-            const tileSizeX = 10;
-            const tileSizeY = 10;
+            const tileSizeX = 5;
+            const tileSizeY = 5;
             const MapSizeX = Math.round((rect.width * scaleX) / tileSizeX);
             const MapSizeY = Math.round((rect.height * scaleY) / tileSizeY);
 
@@ -87,11 +87,15 @@
             let biomeType = [];
 
             // Set a value for the point-of-interests size when its displayed to the user.
-            const geodeSizeX = 20;
-            const geodeSizeY = 20;
+            const nodeSizeX = 20;
+            const nodeSizeY = 20;
 
             // Create an array to hold the position location of each of the nodes or points of interest that are present within a map.
-            let geodeArray = [];
+            let nodePosArray = [];
+
+            // Create an array to hold the positions of the users attempts on digging in the terrain. Also a variable used to hold the users attempts within the terrain. This can be effected and increased by the upgrades later.            
+            let usersPosArray = [];
+            let usersAttempts = 3;
 
             // Let a variable be equal to 0 to hold the value of which one is selected.
             let selectedMenuOption = 0;
@@ -118,13 +122,14 @@
                 INVENTORY_SCREEN: 12,
                 UPGRADE_MENU: 13,
                 RENDER_TERRAIN: 14,
-                GAME_BEGIN: 15
+                RENDER_NODES: 15,
+                BEGIN_GAME: 16
             };
 
             // A container for the current state on which the game is at so that the script knows what to do depending on the state.
             let gameState
 
-            const textboxMessages = ["Hello", "Who", "Are", "You", "Hello", "Who", "Are", "You", "Hello", "Who", "Are", "You"]
+            const textboxMessages = ["Hello", "Who", "Are", "You", "Hello", "Who", "Are", "You", "Hello", "Who", "Are", "You", "Hello", "Who", "Are", "You", "Hello", "Who", "Are", "You", "Hello", "Who", "Are", "You"]
             const MenuOptions = [["World Map", "Museum", "Inventory", "Upgrade"],["Plains", "Desert", "Forest", "Swamp"], ["Process"]]
 
             function init() {
@@ -191,27 +196,31 @@
                     }
                 }
 
-                // textbox.innerHTML = textboxMessages[gameState]+"<br> Please click with your mouse to continue.";
-
-                // if (click) {
-                //     if (gameState < gameStates.MENUS.MENU_ONE) {
-                //         gameState += 1
-                //     } else if (gameState == gameStates.Menu.MENU_ONE) {
-                //         textbox.innerHTML = MenuPrintout(MenuOptions[0], 0);
-                //     }
-                //     click = false;
-                // }
-
                 if (gameState == gameStates.RENDER_TERRAIN) {
                     // Generate the terrain when a biome is chosen, and change the game state to a state to explain the terrain has been built.
                     mapArray = mapGenerator(biomeType[0], biomeType[1], biomeType[2], MapSizeX, MapSizeY);
-
+                    nodePosArray = nodeGenerator(usersAttempts*2);
                     gameState = 15
+                }
+
+                if (gameState == gameStates.RENDER_NODES) {
+                    nodeRender(array)
                 }
 
                 if (mapArray != []) {
                     mapRender(mapArray, biomeType[3], MapSizeX, MapSizeY, tileSizeX, tileSizeY)
                 }
+            }
+
+            function nodeGenerator(num) {
+                // This function will create a series of random position that can easily be displayed on the canvas temparerily for the user. It returns the values which is a long singular array of x,y,x,y,x,y,x,y which will be interpreted as this structure by a nodeRender function.
+                let i;
+                let temp_pos = []
+                for (i = 0; i < num*2; i = i+2) {
+                    temp_pos.push(range(Math.round(Math.random()*rect.width * scaleX), nodeSizeX, rect.width * scaleX - nodeSizeX))
+                    temp_pos.push(range(Math.round(Math.random()*rect.height * scaleY), nodeSizeY, rect.height * scaleY - nodeSizeY))
+                }
+                return temp_pos
             }
 
             function getBiomeVal(val) {
