Fixed an issue with the hsl() color of the nodes and added a countdown feature

--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
             let usersPosArray = [];
             let usersAttempts = 3;
 
+            // A time variable to count up or down the length of the time that the points of interests that are displayed.
+            let nodeDisplayTime;
+
             // Let a variable be equal to 0 to hold the value of which one is selected.
             let selectedMenuOption = 0;
             let selectedOptionDifference = 0;
@@ -201,12 +204,19 @@
                     // Generate the terrain when a biome is chosen, and change the game state to a state to explain the terrain has been built. Also generate a series of Positions for the nodes.
                     mapArray = mapGenerator(biomeType[0], biomeType[1], biomeType[2], MapSizeX, MapSizeY);
                     nodePosArray = nodeGenerator((usersAttempts*2));
-                    gameState = 15
+                    nodeDisplayTime = 100
+                    gameState = 15 // gameState is equal to display nodes
+                }
+
+                if (nodeDisplayTime > 0) {
+                    nodeDisplayTime -= 1
+                } else if (nodeDisplayTime == 0) {
+                    gameState = 16 // GameState is equal to begin game.
                 }
 
                 if (mapArray != []) {
                     // This will render to the canvas if the mapArray contains some mappable data.
-                    mapRender(mapArray, biomeType[3], MapSizeX, MapSizeY, tileSizeX, tileSizeY)
+                    mapRender(mapArray, biomeType[3], MapSizeX, MapSizeY, tileSizeX, tileSizeY);
                     if (gameState == gameStates.RENDER_NODES) {
                         nodeRender(nodePosArray);
                     }
@@ -218,21 +228,21 @@
                 let i, x, y;
                 let temp_pos = []
                 for (i = 0; temp_pos.length != num*2; i = i+2) {
-                    x = range(Math.round(Math.random()*rect.width*scaleX), nodeSizeX, rect.width*scaleY-nodeSizeX)
-                    y = range(Math.round(Math.random()*rect.height*scaleY), nodeSizeY, rect.height*scaleY-nodeSizeY)
+                    x = range(Math.round(Math.random()*rect.width*scaleX), nodeSizeX, rect.width*scaleY-nodeSizeX);
+                    y = range(Math.round(Math.random()*rect.height*scaleY), nodeSizeY, rect.height*scaleY-nodeSizeY);
                     if (temp_pos.indexOf(x) == -1 && temp_pos.indexOf(y) == -1) {
-                        temp_pos.push(x)
-                        temp_pos.push(y)
+                        temp_pos.push(x);
+                        temp_pos.push(y);
                     }
                 }
-                return temp_pos
+                return temp_pos;
             }
 
             function nodeRender(array) {
                 // This function is used to generate the location of the nodes that have been created on the terrain. This shows the points as locations prepresented on the canvas. Taking the array in a singular array and in the way of x,y,x,y layout.
                 let i;
                 for (i = 0; i < array.length; i = i+2) {
-                    draw("hsl(0, 0% 0%)", array[i]-(nodeSizeX/2), array[i+1]-(nodeSizeY/2), nodeSizeX, nodeSizeY);
+                    draw("hsl(0, 0%, 0%)", array[i]-(nodeSizeX/2), array[i+1]-(nodeSizeY/2), nodeSizeX, nodeSizeY);
                 }
             }
 
@@ -324,11 +334,10 @@
             }
 
             function mapRender(multi_array, biomeColor, MaxX, MaxY, SizeX, SizeY) {
-                let x, y, color;
+                let x, y;
                 for (x = 0; x < MaxX; x++) {
                     for (y = 0; y < MaxY; y++) {
-                        color = biomeColor+multi_array[x][y]+"%)"
-                        draw(color, x*SizeX, y*SizeY, SizeX, SizeY)
+                        draw((biomeColor+multi_array[x][y]+"%)"), x*SizeX, y*SizeY, SizeX, SizeY)
                     }
                 }
             }
