--- a/index.html
+++ b/index.html
@@ -175,10 +175,28 @@
 
                 if (keyCode > 0) {
                     if (keyCode == 87) {
-                        selectedOptionDifference = -1;
+                        if (gameState == gameStates.REPEAT_SEQUENCE) {
+                            usersSequence.push("w");
+                        } else {
+                            selectedOptionDifference = -1;
+                        }
                     }
                     if (keyCode == 83) {
-                        selectedOptionDifference = 1;
+                        if (gameState == gameStates.REPEAT_SEQUENCE) {
+                            usersSequence.push("s");
+                        } else {
+                            selectedOptionDifference = 1;
+                        }
+                    }
+                    if (keyCode == 65) {
+                        if (gameState == gameStates.REPEAT_SEQUENCE) {
+                            usersSequence.push("a");
+                        }
+                    }
+                    if (keyCode == 68) {
+                        if (gameState == gameStates.REPEAT_SEQUENCE) {
+                            usersSequence.push("d");
+                        }
                     }
                     if (keyCode == 13 || keyCode == 32) {
                         chosenMenuOption = selectedMenuOption
@@ -261,14 +279,32 @@
                 if (randomSequence.length == 0 && gameState == gameStates.BEGIN_SEQUENCE) {
                     randomSequence = sequenceGenerator(["w", "a", "s", "d"], 5)
                     sequenceDisplayTime = 100
-                } else if (sequenceDisplayTime > 0) {
+                }
+                
+                if (sequenceDisplayTime > 0) {
+                    // This is to show the sequence for a set amount of time.
                     textbox.innerHTML = textbox.innerHTML+"<br>"+randomSequence
                     sequenceDisplayTime -= 1
                 } else if (sequenceDisplayTime == 0) {
                     gameState = 19
-                } else if (usersSequence.length == randomSequence.length) {
-                    // add a function to test if both variables are the same.
                 }
+                
+                if (usersSequence.length == randomSequence.length) {
+                    // add a function to test if both variables are the same.
+                    textbox.innerHTML = ArraySimilarity(usersSequence, randomSequence)
+                }
+            }
+
+            function ArraySimilarity(arrayA, arrayB) {
+                // How two arrays are similar shown in a percentage.
+                let i;
+                let perc = 100
+                for (i = 0; i < arrayA.length; i++) {
+                    if (arrayA[i] != arrayB[i]) {
+                        perc -= (100/(arrayA.length))
+                    }
+                }
+                return perc
             }
 
             function sequenceGenerator(array, len) {
